--- a/notebooks/metrics.ipynb
+++ b/notebooks/metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -31,12 +31,12 @@
     "import pandas as pd\n",
     "import importlib\n",
     "import os\n",
-    "import sys\n",
-    "sys.path.append('../../..')\n",
-    "#print(os.listdir(\"../../..\"))\n",
     "\n",
-    "from utils.metrics import ClusteringMetrics\n",
-    "from utils.gmm import GaussianMixture\n",
+    "#print(os.getcwd())\n",
+    "os.chdir('../')\n",
+    "\n",
+    "from src.metrics import ClusteringMetrics\n",
+    "from src.gmm import GaussianMixture\n",
     "\n",
     "# Scikit-learn for comparison\n",
     "from sklearn.mixture import GaussianMixture as SklearnGMM\n",
