--- a/notebooks/priors.ipynb
+++ b/notebooks/priors.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,18 +38,18 @@
     "from matplotlib.colors import ListedColormap\n",
     "import importlib\n",
     "import os\n",
-    "import sys\n",
-    "sys.path.append('../../..')\n",
-    "#print(os.listdir(\"../../..\"))\n",
     "\n",
-    "import utils.gmm\n",
-    "import utils.metrics\n",
-    "import utils.gmm_init\n",
-    "importlib.reload(utils.gmm)\n",
-    "importlib.reload(utils.metrics)\n",
-    "importlib.reload(utils.gmm_init)\n",
-    "from utils.gmm import GaussianMixture\n",
-    "from utils.gmm_init import GMMInitializer\n",
+    "#print(os.getcwd())\n",
+    "os.chdir('../')\n",
+    "\n",
+    "import src.gmm\n",
+    "import src.metrics\n",
+    "import src.gmm_init\n",
+    "importlib.reload(src.gmm)\n",
+    "importlib.reload(src.metrics)\n",
+    "importlib.reload(src.gmm_init)\n",
+    "from src.gmm import GaussianMixture\n",
+    "from src.gmm_init import GMMInitializer\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(\"Using device:\", device)\n",
