final commit for package

--- a/notebooks/metrics.ipynb
+++ b/notebooks/metrics.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "os.chdir('../')\n",
     "\n",
-    "from torchgmm import GaussianMixture, GMMInitializer, ClusteringMetrics, dynamic_figsize, plot_gmm\n",
+    "from tgmm import GaussianMixture, GMMInitializer, ClusteringMetrics, dynamic_figsize, plot_gmm\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "random_state = 0\n",
